Implemented TLS http server and handlers for nonsecure and secure

--- a/funcom.toml
+++ b/funcom.toml
@@ -13,6 +13,10 @@ driver_name = "mysql"
 
 [http]
 
-server_address = ":3000"
+http_addr = ":4000"
+
+[https]
+
+https_addr = ":443"
 ###############################################################################
 
